--- a/app/src/main/res/layout/item_main_folder.xml
+++ b/app/src/main/res/layout/item_main_folder.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/itemMainListIcon"
+        android:id="@+id/itemMainFolderIcon"
         android:padding="16dp"
         android:src="@drawable/ic_folder_black_24dp"
         android:layout_width="64dp"
@@ -20,14 +20,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/itemMainListTitle"
+            android:id="@+id/itemMainFolderTitle"
             android:textColor="#333333"
             android:textSize="16sp"
             tools:text="Camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
-            android:id="@+id/itemMainListContent"
+            android:id="@+id/itemMainFolderContent"
             android:textSize="12sp"
             tools:text="3 个视频"
             android:layout_marginTop="2dp"
