--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -3,134 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="#999999"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <SurfaceView
-        android:id="@+id/playSeufaceView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_gravity="center"
+        android:id="@+id/playSurfaceView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <RelativeLayout
-        android:visibility="gone"
-        android:id="@+id/playUI"
+    <FrameLayout
+        android:id="@+id/playTouchZone"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <!-- 底栏 -->
-        <LinearLayout
-            android:paddingTop="16dp"
-            android:background="#99000000"
-            android:id="@+id/playBottomZone"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <!-- 进度条 -->
-            <RelativeLayout
-                android:id="@+id/playProgressZone"
-                android:layout_width="match_parent"
-                android:layout_height="46dp">
-                <TextView
-                    android:id="@+id/playProgressCurrent"
-                    android:layout_alignParentLeft="true"
-                    android:textColor="#ffffff"
-                    android:gravity="center"
-                    tools:text="00:00"
-                    android:layout_centerVertical="true"
-                    android:layout_width="62dp"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/playProgressTotal"
-                    android:layout_alignParentRight="true"
-                    android:textColor="#ffffff"
-                    tools:text="00:00"
-                    android:gravity="center"
-                    android:layout_centerVertical="true"
-                    android:layout_width="62dp"
-                    android:layout_height="wrap_content" />
-                <SeekBar
-                    android:id="@+id/playProgressSeekBar"
-                    android:layout_toRightOf="@id/playProgressCurrent"
-                    android:layout_toLeftOf="@id/playProgressTotal"
-                    android:layout_centerVertical="true"
-                    android:progress="50"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </RelativeLayout>
-            <!-- 按钮 -->
-            <LinearLayout
-                android:id="@+id/playButtonZone"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="46dp">
-                <ImageView
-                    android:id="@+id/playButtonLock"
-                    android:padding="12dp"
-                    android:tint="#ffffff"
-                    android:src="@drawable/ic_lock_black_24dp"
-                    android:background="?attr/selectableItemBackground"
-                    android:clickable="true"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent" />
-                <ImageView
-                    android:id="@+id/playButtonPrevious"
-                    android:padding="6dp"
-                    android:tint="#ffffff"
-                    android:src="@drawable/ic_skip_previous_black_24dp"
-                    android:background="?attr/selectableItemBackground"
-                    android:clickable="true"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent" />
-                <ImageView
-                    android:id="@+id/playButtonPlay"
-                    android:padding="6dp"
-                    android:tint="#ffffff"
-                    android:src="@drawable/ic_play_arrow_black_24dp"
-                    android:background="?attr/selectableItemBackground"
-                    android:clickable="true"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent" />
-                <ImageView
-                    android:id="@+id/playButtonNext"
-                    android:padding="6dp"
-                    android:tint="#ffffff"
-                    android:src="@drawable/ic_skip_next_black_24dp"
-                    android:background="?attr/selectableItemBackground"
-                    android:clickable="true"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent" />
-                <ImageView
-                    android:id="@+id/playButtonFullscreen"
-                    android:padding="6dp"
-                    android:tint="#ffffff"
-                    android:src="@drawable/ic_fullscreen_black_24dp"
-                    android:background="?attr/selectableItemBackground"
-                    android:clickable="true"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent" />
-            </LinearLayout>
-        </LinearLayout>
-        <!-- 顶栏 -->
-        <android.support.v7.widget.Toolbar
-            android:background="#99000000"
-            android:id="@+id/playToolbar"
-            android:layout_alignParentTop="true"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"/>
-        <!-- 额外操作栏 -->
-        <RelativeLayout
-            android:id="@+id/playExtraZone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </RelativeLayout>
-    </RelativeLayout>
+        android:layout_height="match_parent"/>
 
     <!-- 常亮显示区 -->
     <RelativeLayout
@@ -180,6 +66,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </android.support.v7.widget.CardView>
+    <!--  音量亮度提示框 -->
+    <android.support.v7.widget.CardView
+        android:visibility="gone"
+        android:id="@+id/playVerticalSlideInfoUI"
+        android:layout_margin="4dp"
+        app:cardBackgroundColor="#000000"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_margin="8dp"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/playVerticalSlideInfoIcon"
+                android:tint="#ffffff"
+                android:src="@drawable/ic_brightness_high_black_24dp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <creepersan.videoplayer.View.VerticalProgressBar
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:id="@+id/playVerticalSlideInfoProgressBar"
+                android:layout_width="12dp"
+                android:layout_height="56dp" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
     <!-- 解锁提示 -->
     <android.support.v7.widget.CardView
         android:visibility="gone"
@@ -201,4 +116,122 @@
             android:layout_height="64dp" />
     </android.support.v7.widget.CardView>
 
+    <!-- 额外操作栏 -->
+    <RelativeLayout
+        android:id="@+id/playExtraZone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </RelativeLayout>
+    <!-- 底栏 -->
+    <LinearLayout
+        android:background="#99000000"
+        android:id="@+id/playBottomZone"
+        android:layout_gravity="bottom"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!-- 进度条 -->
+        <RelativeLayout
+            android:visibility="gone"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:id="@+id/playProgressZone"
+            android:layout_width="match_parent"
+            android:layout_height="46dp">
+            <TextView
+                android:id="@+id/playProgressCurrent"
+                android:layout_alignParentLeft="true"
+                android:textColor="#ffffff"
+                android:gravity="center"
+                tools:text="00:00"
+                android:layout_centerVertical="true"
+                android:layout_width="62dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/playProgressTotal"
+                android:layout_alignParentRight="true"
+                android:textColor="#ffffff"
+                tools:text="00:00"
+                android:gravity="center"
+                android:layout_centerVertical="true"
+                android:layout_width="62dp"
+                android:layout_height="wrap_content" />
+            <SeekBar
+                android:id="@+id/playProgressSeekBar"
+                android:layout_toRightOf="@id/playProgressCurrent"
+                android:layout_toLeftOf="@id/playProgressTotal"
+                android:layout_centerVertical="true"
+                android:progress="50"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+        <!-- 按钮 -->
+        <LinearLayout
+            android:visibility="gone"
+            android:layout_marginBottom="8dp"
+            android:id="@+id/playButtonZone"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="46dp">
+            <ImageView
+                android:id="@+id/playButtonLock"
+                android:padding="12dp"
+                android:tint="#ffffff"
+                android:src="@drawable/ic_lock_black_24dp"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent" />
+            <ImageView
+                android:id="@+id/playButtonPrevious"
+                android:padding="6dp"
+                android:tint="#ffffff"
+                android:src="@drawable/ic_skip_previous_black_24dp"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent" />
+            <ImageView
+                android:id="@+id/playButtonPlay"
+                android:padding="6dp"
+                android:tint="#ffffff"
+                android:src="@drawable/ic_play_arrow_black_24dp"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent" />
+            <ImageView
+                android:id="@+id/playButtonNext"
+                android:padding="6dp"
+                android:tint="#ffffff"
+                android:src="@drawable/ic_skip_next_black_24dp"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent" />
+            <ImageView
+                android:id="@+id/playButtonFullscreen"
+                android:padding="6dp"
+                android:tint="#ffffff"
+                android:src="@drawable/ic_fullscreen_black_24dp"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+    </LinearLayout>
+    <!-- 顶栏 -->
+    <android.support.v7.widget.Toolbar
+        android:visibility="gone"
+        android:background="#99000000"
+        android:id="@+id/playToolbar"
+        android:layout_gravity="top"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"/>
 </FrameLayout>
